lib/typed-mind/grammar/grammar.js
    source_file: ($) => seq(repeat($._line), optional($._final_line_no_newline)),

    // Error recovery (S-GRAMMAR-4a): PATH A shipped — there is deliberately
    // NO catch-all `error_line` alternative below. A line matching none of
    // these choices falls through to tree-sitter's built-in GLR recovery,
    // producing a genuine `(ERROR)` node with real ranges (doc §2 "Q0 SPIKE
    // QUESTION with a decision rule"; Q0's fuzz gate proved this terminates
    // cleanly under the revised extras design above). Downstream consumers
    // (TM-3's S-PARSE-3 diagnostics mapper) walk `(ERROR)`/`(MISSING)` only —
    // the standard idiom, not a second node shape to scan for.
    _line: ($) =>
      choice(
        $.comment_line,
        $.import_statement,
        $.suppress_line,
        $.suppression_block,
        $.longform_block,
        $.classfile_block_sigil,
        $.program_declaration,
        $.file_declaration,
        $.function_declaration,
        $.class_declaration,
        $.classfile_declaration,
        $.constants_declaration,
        $.dto_declaration,
        $.asset_declaration,
        $.uicomponent_declaration,
        $.runparameter_declaration,
        $.dependency_declaration,
        $.typedef_declaration,
        $.dto_field,
        $._continuation,
        $._description_line,
        $._ws_line,
        $._newline,
      ),

    // The EOF-without-trailing-newline case: reuse of every top-level
    // production's body via `_line_end_final` (no trailing `\n` consumed).
    // Only entity declarations, continuations, and comments are legal as
    // the last line of a file with no newline; blank/whitespace-only
    // "lines" at EOF need no representation since there is nothing after
    // them to delimit.
    _final_line_no_newline: ($) =>
      choice(
        $.comment_line_final,
        $.import_statement_final,
        $.suppress_line_final,
        $.program_declaration_final,
        $.file_declaration_final,
        $.function_declaration_final,
        $.class_declaration_final,
        $.classfile_declaration_final,
        $.constants_declaration_final,
        $.dto_declaration_final,
        $.asset_declaration_final,
        $.uicomponent_declaration_final,
        $.runparameter_declaration_final,
        $.dependency_declaration_final,
        $.typedef_declaration_final,
        $.dto_field_final,
        $._continuation_final,
        $._description_line_final,
      ),

    // --- document-level (D1, D3, D4) -------------------------------------

    // D1: full-line comment at column 0.
    longform_block: ($) =>
      seq($.block_header, $._newline, repeat(choice($._newline, $.block_comment_line, $.block_property)), '}', $._line_end),

    // No explicit whitespace token before '{': `extras` already skips
    // spaces/tabs between grammar-level tokens. An earlier draft added a
    // bare `/[ \t]*/` here; that zero-width-capable anonymous token
    // collided with `_block_indent` at the lexer level (both are
    // `[ \t]`-shaped and registered as competing candidates at the SAME
    // input position once a nested field body's indentation is being
    // lexed), causing indentation before a field's closing `}` to be
    // mis-consumed as a phantom `block_header` continuation instead of
    // `_block_indent`. Removed — the exact zero-width-anonymous-token
    // pathology the doc's §2 "Newline significance" section already
    // warns against in a different guise (GE-1's `extras: []` crash was
    // the same family of bug at the top-level extras design; this was its
    // ordinary-grammar-token echo).
    block_header: ($) =>
      choice(
        ...KEYWORDS.filter((k) => k !== 'dependency').map((k) =>
          seq(alias(blockKwToken(k), $.block_kw), field('name', optional($.header_name_rest)), '{'),
        ),
        // H10: `dependency Name {` (identifier form, same shape as the rest)
        // OR `dependency "quoted-name" {` (H10's quoted-name liberalization,
        // scoped-package headers — snippets/dependency-longform.tmd:17,22
        // `dependency "@types/node" {`). The quoted-name alternative CANNOT
        // use a bare `'dependency'` string literal here: an earlier draft
        // did, and that literal became its OWN independently-lexable token
        // (tree-sitter registers every distinct literal as a token symbol
        // in its own right), which mis-lexed `dependency -> Main` and every
        // other keyword×sigil case for `dependency` — the exact GE-4/FAQ-6
        // failure this Quantum's brief called out, reproduced here for a
        // literal instead of a `word`-extracted keyword. Fixed the same way
        // as every other header: bake the disambiguating suffix (here, the
        // OPENING QUOTE — a quote can never start a plain `entity_name`) into
        // one atomic `block_kw`-shaped token, then let the string body lex
        // as an immediately-adjacent sibling token.
        seq(alias(blockKwToken('dependency'), $.block_kw), field('name', optional($.header_name_rest)), '{'),
        seq(alias(dependencyQuotedKwToken, $.block_kw), field('name', $.header_quoted_name), '{'),
      ),

    // header_quoted_name: the string body immediately following the opening
    // quote that `dependencyQuotedKwToken` already consumed (`token.immediate`
    // — no extras between the quote and its content). Reassembling the full
    // quoted literal is the opening `"` (inside block_kw's text) + this
    // node's text; downstream consumers needing the true declared-string
    // shape can also re-derive it as `"` + header_quoted_name.text.
    header_name_rest: () => token.immediate(/\w*/),

    // H12: sigil-with-brace ClassFile (S-GRAMMAR-2a) — `Name #: path [<:
    // Base[, Iface...]] {`. Starts with a plain `entity_name`, so it needs
    // no compound-token disambiguation (a quote/sigil can never be mistaken
    // for a keyword-header prefix here). Observed: hero-longform.tmd:8
    // `TodoService #: api.ts {`, classfile-longform.tmd:24,31.
    classfile_block_sigil: ($) =>
      seq(
        $.entity_name,
        '#:',
        $.path,
        optional(seq('<:', $.inherit_list)),
        '{',
        $._newline,
        repeat(choice($._newline, $.block_comment_line, $.block_property)),
        '}',
        $._line_end,
      ),

    // Block bodies are P1-P7 property lines plus P6 comments plus blank
    // lines, repeated (inlined at each use site — a hidden `repeat()`-only
    // rule that can match empty is rejected by tree-sitter except as the
    // grammar's start rule). An unterminated block (no closing `}` before
    // EOF) simply runs out of matchable alternatives and falls through to
    // built-in ERROR recovery at EOF — the same path-A mechanism Q0 proved
    // terminates without a scanner (doc §2 "an unterminated block hits EOF
    // as an ERROR-class node").

    // P6: `#` comment line inside a block body (same comment token as D1,
    // scoped to block-body position for its own fixture-bindable node).
    block_property: ($) =>
      choice(
        $.property_string, // P1: key: "string"
        $.property_list, // P2: key: [a, b]
        $.dto_fields_block, // P5: fields: { <nested per-field blocks> }
        $.property_nested_block, // P5 (non-`fields` nested object; same shape, generic key)
        $.dto_field_inline, // P5b named ONLY inside a fields block — see below
        $.property_bool, // P4: key: true|false
        $.property_identifier, // P3: key: identifier
        $.property_freetext, // P7: total fallback — key: <rest-of-line>
      ),

    // P1: `key: "string"`.
    property_string: ($) => seq($._block_indent, $.property_key, ':', $.string, optional($.inline_comment), $._newline),

    // P2: `key: [a, b]`. Reuses C1-C15's `name_list` token class
    // (list_entry already widened for dotted/scoped/dashed entries, e.g.
    // `calls: [Database.delete]` — scenario-31-mixed-syntax.tmd:30).
    property_key: () => /[A-Za-z_]\w*/,

    // P4/P3 tie-break — REVISED after PR #17 review found the original fix
    // over-fired. `true`/`false` are equal-length matches against
    // `entity_name` (both 4/5-char identifiers); tree-sitter's default (no
    // precedence anywhere) resolves that exact-length lexer tie in favor of
    // the identifier-class regex token, not the literal-string token, so
    // bare `flag: true` mis-lexed as `property_identifier` without help.
    // `prec(1)` here is what wins that exact tie for `bool_literal` and is
    // load-bearing — it is NOT the defect PR #17 found.
    //
    // The defect was in what `property_identifier` did with the REST of an
    // identifier that merely STARTS with `true`/`false`: a static
    // `prec()`'d token overrides tree-sitter's longest-match comparison
    // UNCONDITIONALLY, not just at ties — verified empirically
    // (`token(prec(1, /abc/))` beats a same-position `token(/[a-z]+/)` even
    // when the latter would match a strictly longer span). With only
    // `$.entity_name` as `property_identifier`'s value token,
    // `bool_literal` grabbed the leading `true`/`false` out of
    // `trueClassName` / `falseAlarmHandler` and stranded the remainder as
    // an ERROR — `bool_literal`'s prec(1) has no visibility into "but a
    // longer identifier was also possible here," because by the time the
    // lexer commits to `bool_literal`, `property_identifier`'s attempt at
    // the same span never got a chance to complete.
    //
    // Fix: `property_identifier` (and `inline_field_pair`) additionally
    // accept `bool_prefixed_identifier` below — an identifier that starts
    // with `true`/`false` and CONTINUES with more word characters, given
    // the SAME `prec(1)` so it competes with `bool_literal` on LENGTH
    // (`bool_prefixed_identifier` requires at least one more `\w` after
    // true/false, so it is never viable for the bare `true`/`false` case —
    // no genuine tie exists there, `bool_literal` is the only match — and
    // it always matches a strictly longer span than `bool_literal` alone
    // whenever it IS viable, so equal precedence lets length settle it).
    // This is scoped to exactly the two positions that ever set
    // `bool_literal` against an identifier alternative; `entity_name`'s own
    // precedence (default, untouched) still governs every other grammar
    // position (E1-E11, C1-C15, H1-H12), and `_sig_chunk`/`name_list`/
    // `word` are untouched — three earlier attempts that touched those
    // (a scoped `value_identifier` token, matching `_sig_chunk` precedence,
    // and `word: $.entity_name` keyword extraction) each cascaded into a
    // regression elsewhere (P7's freetext fallback, S-GRAMMAR-1b's inline
    // comment, and the `fields:` keyword literal respectively) before this
    // narrower fix was found.
    _block_indent: () => token(/[ \t]+/),

    // --- top-level entity declarations (E1-E11) --------------------------
    // Shortform: one sigil per line disambiguates the entity kind (`->` for
    // Program, `@` for File, `::` for Function, etc. — doc §1's inventory
    // table). Every declaration shares the shape `entity_name, sigil, body,
    // optional(inline_comment), line_end`; each has its own named production
    // (not one generic "declaration" node) so node-types.json carries a
    // distinct typed shape per kind for TM-3's codegen.

    // E1: `Name -> Entry ["Purpose"] [vX.Y.Z]`.
    function_declaration: ($) => seq($.entity_name, '::', $.signature, optional($.inline_comment), $._line_end),
    class_declaration: ($) => seq($.entity_name, '<:', optional($.inherit_list), optional($.inline_comment), $._line_end),
    classfile_declaration: ($) =>
      seq($.entity_name, '#:', $.path, optional(seq('<:', $.inherit_list)), optional($.inline_comment), $._line_end),
    dto_declaration: ($) => seq($.entity_name, '%', optional($.string), optional($.inline_comment), $._line_end),
    typedef_declaration: ($) =>
      seq($.entity_name, '=', choice($.typedef_enum_variant, $.type_expr), optional($.inline_comment), $._line_end),
    type_expr: ($) => $.type_union,
    type_union: ($) => prec.left(1, seq($.type_intersection, repeat(seq('|', $.type_intersection)))),
    type_intersection: ($) => prec.left(2, seq($.type_postfix, repeat(seq('&', $.type_postfix)))),

    // type_postfix: suffix arrays, any depth (`number[][]`, corpus-attested
    // complex-dto-example.tmd:45).
    type_atom: ($) =>
      choice(
        $.type_generic,
        $.type_readonly_array,
        alias($._qualified_name_opaque_token, $.type_opaque),
        alias($._paramlist_opaque_run, $.type_opaque),
        alias($._typeof_opaque_run, $.type_opaque),
        $.type_named,
        $.type_literal_string,
        $.type_literal_number,
        $._type_paren_group,
        $.type_opaque,
      ),

    _qualified_name_opaque_token: () => token(seq(/[A-Za-z_]\w*/, repeat1(seq('.', /[A-Za-z_]\w*/)))),

    // tm10-inc2-grammar (issue #50): _paramlist_opaque_open consumes the
    // minimal disambiguating prefix as ONE atomic token — '(' + identifier +
    // optional whitespace + ':' — mirroring block_kw's "bake the whole
    // disambiguating run into one token" mechanism and
    // _qualified_name_opaque_token's own longest-match precedent above. This
    // token is objectively LONGER than type_named's bare-identifier match at
    // the same start position (it reaches past the identifier to the ':'),
    // so it wins the lexer race outright — no parser-level precedence
    // involved, unlike the five reverted attempts the type_atom "KNOWN GAP"
    // comment above records. Once it wins, the surrounding production
    // consumes the rest of the balanced run via the existing _opaque_piece
    // machinery (already proven for nested object literals) so the WHOLE
    // '(x: number) => void' — not just the '(x:' prefix — lands in one
    // type_opaque leaf. Confirmed empirically against the real corpus
    // instance webhookstorage's outbound-delivery WorkerDeps DTO field
    // carries (multi-param, optional markers, generic return type) — see
    // this file's corpus fixtures. Scope: this closes every real TypeScript
    // function-type shape (a parameter always has `name: type` or the list
    // is empty, `() => void`, already covered pre-existing). It does NOT
    // close the `fn (custom)` sibling in type_atom's KNOWN GAP family — that
    // shape has no colon and no lexical signal to anchor a longest-match
    // token on; see the corpus fixture's comment for why it stays open.
    _typeof_opaque_run: ($) => prec.right(seq($._typeof_opaque_open, repeat($._opaque_piece), ')', repeat($._opaque_piece))),

    // type_named: a bare identifier reference (builtin primitive, generic
    // name, or an entity-table name — checker territory, Q2). Wraps
    // entity_name so the AST kind carries its own span distinct from a
    // generic's base-name span.
    type_named: ($) => $.entity_name,

    // type_generic: `Base<Arg1, Arg2, ...>` — commas separate arguments; the
    // `Pick<S3Client, "send">` census repro (doc §1) parses with two
    // arguments, the second a string literal.
    type_generic: ($) => seq(field('base', $.type_named), '<', $.type_expr, repeat(seq(',', $.type_expr)), '>'),

    _type_paren_group: ($) => seq('(', $.type_expr, ')'),

    // type_readonly_array: `readonly T[]` / `readonly (A | B)[]`. Two
    // concrete forms per the readonlyIdentKwToken/readonlyParenKwToken
    // header comment above — both alias to the same visible `readonly_kw`
    // node so downstream AST code has one place to detect the prefix.
    signature: ($) => repeat1(choice($._sig_chunk, $.string)),

    inherit_list: ($) => seq($.entity_name, repeat(seq(',', $.entity_name))),

    // A line of only whitespace is blank, not an ERROR.
    entity_name: () => /[A-Za-z_]\w*/,

    string: () => /"[^"\n]*"/,

    path: () => /[^ \t\n:{}]+/,
